# Operation

./: .travis.yml  README.md
operation_bringup/: CMakeLists.txt  package.xml
operation_bringup/launch/: gripper.launch  iiwa_bringup.launch  iiwa_control.launch  operation.launch  web.launch
operation_bringup/scripts/: operation_envars.bash
operation_control/: CMakeLists.txt  package.xml
operation_control/launch/: controller.launch
operation_control/scripts/: action_coordinator.py  arm_controller.py  frame_transformer.py  gripper_controller.py
operation_description/: CMakeLists.txt  package.xml
operation_description/launch/: description.launch
operation_description/meshes/: Game.dae  Table.blend  Table.dae  Wall.dae
operation_description/urdf/: iiwa.urdf.xacro
operation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
operation_moveit_config/config/: iiwa7.srdf
operation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa7_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
operation_viz/: CMakeLists.txt  package.xml
operation_viz/launch/: view_model.launch  view_robot.launch
