<?xml version="1.0"?>
<package format="2">
  <name>operation_description</name>
  <version>0.0.0</version>
  <description>The operation_description package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC_BY_3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
