<?xml version="1.0"?>
<package format="2">
  <name>operation_viz</name>
  <version>0.0.0</version>
  <description>The operation_viz package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>operation_description</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
